--- a/index.html
+++ b/index.html
@@ -1,50 +1,52 @@
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Sign-in</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-  </head>
-  <body id="content">
-  <h1>Welcome to CodersWhoCook!</h1>
-  <div id="log-in">
-  <h2>Log in here!</h2>
-    <form>
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username"><br><br>
-      <label for="password">Password:</label>
-      <input type="text" id="password" name="password"><br><br>
-      <button type="submit">Log in!</button></p>
-    </form>
-  </div>
-  <div id="new-user">
-  <h2>Create a new account here!</h2>
-    <form>
-        <label for="fname">First Name:</label>
-        <input type="text" id="first-name" name="first-name"><br><br>
-        <label for="lname">Last Name:</label>
-        <input type="text" id="last-name" name="last-name"><br><br>
-        <label for="email">Email:</label>
-        <input type="text" id="email" name="email"><br><br>
-        <label for="gender">Gender:</label>
-        <input type="text" id="gender" name="gender"><br><br>
-        <label for="country">Country:</label>
-        <input type="text" id="country" name="country"><br><br>
-        <label for="language">Coding Language:</label>
-        <input type="text" id="language" name="language"><br><br>
-        <label for="food">Cuisine:</label>
-        <input type="text" id="food" name="food"><br><br>
-        <p>Please select your years of experience with programming:</p>
-        <input type="radio" id="exp-1" name="exp" value="30">
-        <label for="age1">0-1 yrs</label><br>
-        <input type="radio" id="exp-2" name="exp" value="60">
-        <label for="age2">2-5 yrs</label><br>  
-        <input type="radio" id="exp-3" name="exp" value="100">
-        <label for="age3">5+ yrs</label><br><br>
-        <button type="submit">Create account!</button></p>
-    </form>
-  </div>
-
-  </body>
+    <head>
+        <link rel = "stylesheet" href = "index-style.css">
+        <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">    
+        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+        <script src="https://use.fontawesome.com/26cced8d82.js"></script>
+        <title>CodersWhoCook</title>
+    </head>
+    <body>
+        <nav>
+            <div class="logo">
+                <a href="#"><img src="images/logo.png"></a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#news">Login</a></li>
+                <li><a href="#contact">Sign-up</a></li>
+            </ul>
+        </nav>
+        <div class="landing-content">
+            <div class="landing-text">
+                <span>CodersWhoCook</span>
+                <p>
+                Connecting coders with a passion for food and learning. Bond over food!
+                </p>
+            </div>
+            <div class="landing-img">
+                <a href="https://www.freepik.com/free-photos-vectors/food"><img src="images/illus.png"></a>
+            </div>
+        </div>
+        <div>
+               <h2> How it Works</h2>
+        </div>
+        <div class="about">
+            <div class="steps">
+                <h4>Step 1:</h4>
+                Sign up with your email-address.
+            </div>
+            <div class="steps">
+                <h4>Step 2:</h4>
+                Click match on user dashboard and we'll pair you with another foodie-coder.
+            </div>
+            <div class="steps">
+                <h4>Step 3:</h4>
+                Get a recipie that you can virtually cook together based on tastes. Interview with a full stomach!
+            </div>
+        </div>
+        <div class="footer">
+        <p>Made with 💙 by Leah Teffera, Oyidiya Oji Palino, Blasovia Monique Erinna and Aashi Shah<br>
+        as part of HobbyHacks</p>
+        </div>
+    </body>
 </html>
