made some minor tweaks, added better text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="landing-text">
                 <span>CodersWhoCook</span>
                 <p>
-                Connecting coders with a passion for food and learning. Bond over food!
+                Connecting coders with a passion for food and learning. Meet up with someone virtually, cook a challenging dish and discuss code.
                 </p>
             </div>
             <div class="landing-img">
@@ -33,15 +33,15 @@
         <div class="about">
             <div class="steps">
                 <h4>Step 1:</h4>
-                Sign up with your email-address.
+                Sign up with your email-address and set your preferences.
             </div>
             <div class="steps">
                 <h4>Step 2:</h4>
-                Click match on user dashboard and we'll pair you with another foodie-coder.
+                We'll pair you with another foodie-coder whenever you want to.
             </div>
             <div class="steps">
                 <h4>Step 3:</h4>
-                Get a recipie that you can virtually cook together based on tastes. Interview with a full stomach!
+                Get a recipie that you can virtually cook together based on tastes. Code together on a full stomach!
             </div>
         </div>
         <div class="footer">
