--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">    
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
         <script src="https://use.fontawesome.com/26cced8d82.js"></script>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="index-style.css">
         <title>CodersWhoCook</title>
     </head>
     <body>
@@ -12,8 +14,8 @@
                 <a href="#"><img src="images/logo.png"></a>
             </div>
             <ul class="nav-links">
-                <li><a href="#news">Login</a></li>
-                <li><a href="#contact">Sign-up</a></li>
+                <li><a href="sign-in.html">Login</a></li>
+                <li><a href="sign-up.html">Sign-up</a></li>
             </ul>
         </nav>
         <div class="landing-content">
@@ -33,15 +35,15 @@
         <div class="about">
             <div class="steps">
                 <h4>Step 1:</h4>
-                Sign up with your email-address.
+                <b>Sign up</b> with your email-address.
             </div>
             <div class="steps">
                 <h4>Step 2:</h4>
-                Click match on user dashboard and we'll pair you with another foodie-coder.
+                Click <b>match</b> on the user dashboard and we'll pair you with another foodie-coder.
             </div>
             <div class="steps">
                 <h4>Step 3:</h4>
-                Get a recipie that you can virtually cook together based on tastes. Interview with a full stomach!
+                Get a <b>recipe</b> that you can virtually cook together based on tastes. Interview with a full stomach!
             </div>
         </div>
         <div class="footer">
