--- a/sign-up.html
+++ b/sign-up.html
@@ -2,12 +2,26 @@
   <head>
     <meta charset="UTF-8">
     <title>Sign-in</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">    
+        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+        <script src="https://use.fontawesome.com/26cced8d82.js"></script>
+        <script src="jquery-3.5.1.min.js"></script>
+        <script src ="script.js"></script>
   </head>
-  <body id="content">
-    <h1>Create a new account here!</h1>
+  <body>
+    <nav>
+      <div class="logo">
+          <a href="index.html"><img src="images/logo.png"></a>
+      </div>
+      <ul class="nav-links">
+          <li><a href="sign-in.html">Login</a></li>
+          <li><a href="sign-up.html">Sign-up</a></li>
+      </ul>
+  </nav>
+    <div id="content">
+    <h1 class="landing-text">Hi there!</h1>
+    <h2 class="landing-text">Create a new account</h2>
     <div id="new-user">
           <form>
               <label for="fname">First Name:</label>
@@ -34,4 +48,5 @@
               <button type="submit">Create account!</button></p>
           </form>
         </div>
+      </div>
   </body>
