--- a/sign-in.html
+++ b/sign-in.html
@@ -3,20 +3,33 @@
     <meta charset="UTF-8">
     <title>Sign-in</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="jquery-3.5.1.min.js"></script>
+    <script src ="script.js"></script>
   </head>
-  <body id="content">
-  <h1>Welcome to CodersWhoCook!</h1>
+  <body>
+    <nav>
+      <div class="logo">
+          <a href="index.html"><img src="images/logo.png"></a>
+      </div>
+      <ul class="nav-links">
+          <li><a href="sign-in.html">Login</a></li>
+          <li><a href="sign-up.html">Sign-up</a></li>
+      </ul>
+  </nav>
+  <div id="content">
+  <h1>Hi there!</h1>
+  <h2>Log-in</h2>
   <div id="log-in">
-  <h2>Log in here!</h2>
     <form>
       <label for="username">Username:</label>
       <input type="text" id="username" name="username"><br><br>
       <label for="password">Password:</label>
       <input type="text" id="password" name="password"><br><br>
-      <button type="submit">Log in!</button></p>
+      <button type="submit" id="login-click">Log in!</button>
     </form>
+  </div>
   </div>
   </body>
 </html>
