--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
                 <a href="#"><img src="images/logo.png"></a>
             </div>
             <ul class="nav-links">
-                <li><a href="#news">Login</a></li>
-                <li><a href="#contact">Sign-up</a></li>
+                <li><a href="sign-in.html">Login</a></li>
+                <li><a href="#sign-up.html">Sign-up</a></li>
             </ul>
         </nav>
         <div class="landing-content">
