--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="sign-in.html">Login</a></li>
-                <li><a href="#sign-up.html">Sign-up</a></li>
+                <li><a href="sign-up.html">Sign-up</a></li>
             </ul>
         </nav>
         <div class="landing-content">
